[metadata]
name = geomtiles
version = 0.1.0
description = Geo tiles utilities and MVT helpers
long_description = file: README.md
long_description_content_type = text/markdown
author = Santiago Lozada 
author_email = sanloztel2004@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >=3.9
install_requires =
    sqlalchemy>=2.0
    asyncpg>=0.29
include_package_data = True

[options.packages.find]
where = .
