[metadata]
name = geomtiles
version = 0.1.0
description = Geo tiles utilities and MVT helpers
long_description = file: README.md
long_description_content_type = text/markdown
author = Santiago Lozada
author_email = sanloztel2004@gmail.com
maintainer = Santiago Lozada
maintainer_email = sanloztel2004@gmail.com
url = https://github.com/santloz/geomtiles
project_urls =
    Homepage = https://github.com/santloz/geomtiles
    Source = https://github.com/santloz/geomtiles
    Bug Tracker = https://github.com/santloz/geomtiles/issues
keywords = mvt, tiles, postgis, mvt-tiles, geospatial, gis
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Framework :: AsyncIO
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.9
install_requires =
    sqlalchemy>=2.0
    asyncpg>=0.29
    fastapi>=0.95
    pydantic>=1.10
include_package_data = True

[options.packages.find]
where = .
